Fix z-index on search results  (#1289)
* Present portal search results as overlay

* Update z-index

--- a/docs/antora/supplemental_portal/css/search.css
+++ b/docs/antora/supplemental_portal/css/search.css
@@ -189,6 +189,7 @@
   background: #181f4c;
   position: sticky;
   top: 0;
+  z-index: 9999; 
 }
 
 .body,
